Align View to Selected has unexpected results on further view change #30719

Closed
opened 2012-03-29 15:36:05 +02:00 by Sanc Tuary · 6 comments

%%%Using blender-2.62-r45256-win32.zip from the buildbot on window XP

A cube that i rotated slightly in every direction (.blend attached to this report)

  • Go to Edit Mode , in face selection mode, select a face.
  • Click on View -> Align View -> Align View to selected -> Top
  • So far no problem, the result is what is expected.

Now rotate the view (not the cube) around the cube then press Numpad 1 to get into Front View
The view is not anymore the correct Front view but is like if we had clicked on View -> Align View -> Align View to selected -> Front

You need to unselect the face (or get back to Object Mode) to be able to re-use Numpad 1 to get in the desired Front View.
I'm not sure if it is a bug or an intended change of the view behaviour , but i find it very unexpected and impractical considering for years it didn't behaved like this, as stable 2.62 release (and past ones down to 2.49b at least) didn't had this strange view behaviour

Additionally, may be related or not, but in several of the view, the grid is not present behind the model (again the grid was always present at those front/top/side view in stable 2.62 and down to 2.49)%%%

%%%Using blender-2.62-r45256-win32.zip from the buildbot on window XP A cube that i rotated slightly in every direction (.blend attached to this report) - Go to Edit Mode , in face selection mode, select a face. - Click on View -> Align View -> Align View to selected -> Top - So far no problem, the result is what is expected. Now rotate the view (not the cube) around the cube then press Numpad 1 to get into Front View The view is not anymore the correct Front view but is like if we had clicked on View -> Align View -> Align View to selected -> Front You need to unselect the face (or get back to Object Mode) to be able to re-use Numpad 1 to get in the desired Front View. I'm not sure if it is a bug or an intended change of the view behaviour , but i find it very unexpected and impractical considering for years it didn't behaved like this, as stable 2.62 release (and past ones down to 2.49b at least) didn't had this strange view behaviour Additionally, may be related or not, but in several of the view, the grid is not present behind the model (again the grid was always present at those front/top/side view in stable 2.62 and down to 2.49)%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Align issue should be fixed in svn rev45262.
I can not see any differences in how grid is working in 2.62 and current trunk. We never have got grid on front/side view, only in top/perspective. Grid is visible is all from/left/top sides if you're using orthogonal viewport.%%%

%%%Align issue should be fixed in svn rev45262. I can not see any differences in how grid is working in 2.62 and current trunk. We never have got grid on front/side view, only in top/perspective. Grid is visible is all from/left/top sides if you're using orthogonal viewport.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%For the grid disappearing, i wasn't clear enough, but i meant it happened after i did the "View -> Align View -> Align View to selected -> Top" , after that in ortho view it wasn't appearing anymore out of only front view in ortho view.

Without doing the "View -> Align View -> Align View to selected -> Top" i mentionned , the grid appeared as usual in ortho view.%%%

%%%For the grid disappearing, i wasn't clear enough, but i meant it happened after i did the "View -> Align View -> Align View to selected -> Top" , after that in ortho view it wasn't appearing anymore out of only front view in ortho view. Without doing the "View -> Align View -> Align View to selected -> Top" i mentionned , the grid appeared as usual in ortho view.%%%

%%%Hm. probably indeed related. I've just triggered rebuild of windows 32bit blender in buildbot, can you test if error still happens after my fix in rev45262?
If it'll be an issue i'll re-open the issue but very accurate steps would be welcome -- quick tests with un-patched blender didn't show issue for me.%%%

%%%Hm. probably indeed related. I've just triggered rebuild of windows 32bit blender in buildbot, can you test if error still happens after my fix in rev45262? If it'll be an issue i'll re-open the issue but very accurate steps would be welcome -- quick tests with un-patched blender didn't show issue for me.%%%
Author

%%%I just grabbed blender-2.62-r45279-win32 from the buildbot and i confirm that both problems are no more present, the align view does not stick forever and the grid re-appear in every ortho views.

Thank you.%%%

%%%I just grabbed blender-2.62-r45279-win32 from the buildbot and i confirm that both problems are no more present, the align view does not stick forever and the grid re-appear in every ortho views. Thank you.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30719
No description provided.