Fix #30719: Align View to Selected has unexpected results on further view change